@@ -193,6 +193,7 @@ int FastFeatureDetector(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*ob
 int ORB(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv);
 int AKAZE(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv);
 int BFMatcher(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv);
+int FlannBasedMatcher(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv);
 int SimpleBlobDetector(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv);
 
 /*
