@@ -27,6 +27,12 @@ static cv::Ptr< cv::AKAZE > akazedetector;
 static cv::Ptr< cv::BFMatcher > bfmatcher;
 
 /*
+ * OpenCV FlannBasedMatcher uses smart pointer to handle its memory.
+ * Here I create a static object to use it.
+ */
+static cv::Ptr< cv::FlannBasedMatcher > flannBasedMatcher;
+
+/*
  * OpenCV SimpleBlobDetector uses smart pointer to handle its memory.
  * Here I create a static object to use it.
  */
@@ -2712,6 +2718,271 @@ int BFMatcher(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv){
     pResultStr = Tcl_NewStringObj( "cv-bfmatcher", -1 );
 
     Tcl_CreateObjCommand(interp, "cv-bfmatcher", (Tcl_ObjCmdProc *) BFMatcher_FUNCTION,
+        (ClientData)NULL, (Tcl_CmdDeleteProc *)NULL);
+
+    Tcl_SetObjResult(interp, pResultStr);
+    return TCL_OK;
+}
+
+
+int FlannBasedMatcher_FUNCTION(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv){
+    int choice;
+    char *handle;
+
+    static const char *FUNC_strs[] = {
+        "match",
+        "knnMatch",
+        "close",
+        0
+    };
+
+    enum FUNC_enum {
+        FUNC_MATCH,
+        FUNC_KNNMATCH,
+        FUNC_CLOSE,
+    };
+
+    if( objc < 2 ){
+        Tcl_WrongNumArgs(interp, 1, objv, "SUBCOMMAND ...");
+        return TCL_ERROR;
+    }
+
+    if( Tcl_GetIndexFromObj(interp, objv[1], FUNC_strs, "option", 0, &choice) ){
+        return TCL_ERROR;
+    }
+
+    handle = Tcl_GetStringFromObj(objv[0], 0);
+
+    switch( (enum FUNC_enum)choice ){
+        case FUNC_MATCH: {
+            Tcl_HashEntry *hashEntryPtr;
+            char *handle1, *handle2;
+            MatrixInfo *info1, *info2;
+            std::vector< cv::DMatch > matches;
+            Tcl_Obj *pResultStr = NULL;
+
+            if( objc != 4 ){
+                Tcl_WrongNumArgs(interp, 2, objv, "queryDescriptors trainDescriptors");
+                return TCL_ERROR;
+            }
+
+            handle1 = Tcl_GetStringFromObj(objv[2], 0);
+            hashEntryPtr = Tcl_FindHashEntry( cv_hashtblPtr, handle1 );
+            if( !hashEntryPtr ) {
+                if( interp ) {
+                    Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+                    Tcl_AppendStringsToObj( resultObj, "match invalid MATRIX handle ",
+                                            handle1, (char *)NULL );
+                }
+
+                return TCL_ERROR;
+            }
+
+            info1 = (MatrixInfo *) Tcl_GetHashValue( hashEntryPtr );
+            if ( !info1 ) {
+                Tcl_SetResult(interp, (char *) "match invalid info data", TCL_STATIC);
+                return TCL_ERROR;
+            }
+
+            handle2 = Tcl_GetStringFromObj(objv[3], 0);
+            hashEntryPtr = Tcl_FindHashEntry( cv_hashtblPtr, handle2 );
+            if( !hashEntryPtr ) {
+                if( interp ) {
+                    Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+                    Tcl_AppendStringsToObj( resultObj, "match invalid MATRIX handle ",
+                                            handle2, (char *)NULL );
+                }
+
+                return TCL_ERROR;
+            }
+
+            info2 = (MatrixInfo *) Tcl_GetHashValue( hashEntryPtr );
+            if ( !info2 ) {
+                Tcl_SetResult(interp, (char *) "match invalid info data", TCL_STATIC);
+                return TCL_ERROR;
+            }
+
+            try {
+                flannBasedMatcher->match(*(info1->matrix), *(info2->matrix), matches);
+            } catch (...){
+                Tcl_SetResult(interp, (char *) "match failed", TCL_STATIC);
+                return TCL_ERROR;
+            }
+
+            pResultStr = Tcl_NewListObj(0, NULL);
+            for (size_t i = 0; i < matches.size(); i++) {
+                Tcl_Obj *pListStr = NULL;
+                pListStr = Tcl_NewListObj(0, NULL);
+                Tcl_ListObjAppendElement(NULL, pListStr, Tcl_NewIntObj( matches[i].queryIdx ));
+                Tcl_ListObjAppendElement(NULL, pListStr, Tcl_NewIntObj( matches[i].trainIdx ));
+                Tcl_ListObjAppendElement(NULL, pListStr, Tcl_NewIntObj( matches[i].imgIdx ));
+                Tcl_ListObjAppendElement(NULL, pListStr, Tcl_NewDoubleObj( matches[i].distance ));
+
+                Tcl_ListObjAppendElement(NULL, pResultStr, pListStr);
+            }
+
+            Tcl_SetObjResult(interp, pResultStr);
+            break;
+        }
+        case FUNC_KNNMATCH: {
+            Tcl_HashEntry *hashEntryPtr;
+            char *handle1, *handle2;
+            MatrixInfo *info1, *info2;
+            std::vector<std::vector<cv::DMatch> > vmatches;
+            Tcl_Obj *pResultStr = NULL;
+            int k;
+
+            if( objc != 5 ){
+                Tcl_WrongNumArgs(interp, 2, objv, "queryDescriptors trainDescriptors k");
+                return TCL_ERROR;
+            }
+
+            handle1 = Tcl_GetStringFromObj(objv[2], 0);
+            hashEntryPtr = Tcl_FindHashEntry( cv_hashtblPtr, handle1 );
+            if( !hashEntryPtr ) {
+                if( interp ) {
+                    Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+                    Tcl_AppendStringsToObj( resultObj, "knnMatch invalid MATRIX handle ",
+                                            handle1, (char *)NULL );
+                }
+
+                return TCL_ERROR;
+            }
+
+            info1 = (MatrixInfo *) Tcl_GetHashValue( hashEntryPtr );
+            if ( !info1 ) {
+                Tcl_SetResult(interp, (char *) "knnMatch invalid info data", TCL_STATIC);
+                return TCL_ERROR;
+            }
+
+            handle2 = Tcl_GetStringFromObj(objv[3], 0);
+            hashEntryPtr = Tcl_FindHashEntry( cv_hashtblPtr, handle2 );
+            if( !hashEntryPtr ) {
+                if( interp ) {
+                    Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+                    Tcl_AppendStringsToObj( resultObj, "knnMatch invalid MATRIX handle ",
+                                            handle2, (char *)NULL );
+                }
+
+                return TCL_ERROR;
+            }
+
+            info2 = (MatrixInfo *) Tcl_GetHashValue( hashEntryPtr );
+            if ( !info2 ) {
+                Tcl_SetResult(interp, (char *) "knnMatch invalid info data", TCL_STATIC);
+                return TCL_ERROR;
+            }
+
+            if(Tcl_GetIntFromObj(interp, objv[4], &k) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            try {
+                flannBasedMatcher->knnMatch(*(info1->matrix), *(info2->matrix), vmatches, k);
+            } catch (...){
+                Tcl_SetResult(interp, (char *) "knnMatch failed", TCL_STATIC);
+                return TCL_ERROR;
+            }
+
+            pResultStr = Tcl_NewListObj(0, NULL);
+            for (size_t i = 0; i < vmatches.size(); i++) {
+                Tcl_Obj *pListStr = NULL;
+                pListStr = Tcl_NewListObj(0, NULL);
+
+                std::vector<cv::DMatch> matches = vmatches[i];
+                for (size_t j = 0; j < matches.size(); j++) {
+                    Tcl_Obj *pSubListStr = NULL;
+                    pSubListStr = Tcl_NewListObj(0, NULL);
+                    Tcl_ListObjAppendElement(NULL, pSubListStr, Tcl_NewIntObj( matches[j].queryIdx ));
+                    Tcl_ListObjAppendElement(NULL, pSubListStr, Tcl_NewIntObj( matches[j].trainIdx ));
+                    Tcl_ListObjAppendElement(NULL, pSubListStr, Tcl_NewIntObj( matches[j].imgIdx ));
+                    Tcl_ListObjAppendElement(NULL, pSubListStr, Tcl_NewDoubleObj( matches[j].distance ));
+
+                    Tcl_ListObjAppendElement(NULL, pListStr, pSubListStr);
+                }
+
+                Tcl_ListObjAppendElement(NULL, pResultStr, pListStr);
+            }
+
+            Tcl_SetObjResult(interp, pResultStr);
+            break;
+        }
+        case FUNC_CLOSE: {
+            if( objc != 2 ){
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            flannBasedMatcher.reset();
+            Tcl_DeleteCommand(interp, handle);
+
+            break;
+        }
+    }
+
+    return TCL_OK;
+}
+
+
+int FlannBasedMatcher(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv){
+    Tcl_Obj *pResultStr = NULL;
+    int count = 0, table_number = 6, key_size = 12, multi_probe_level = 1;
+
+    if (objc != 1 && objc != 2) {
+        Tcl_WrongNumArgs(interp, 1, objv, "?indexParams?");
+        return TCL_ERROR;
+    }
+
+    if (objc == 2) {
+        if(Tcl_ListObjLength(interp, objv[1], &count) != TCL_OK) {
+            Tcl_SetResult(interp, (char *) "FlannBasedMatcher invalid list data", TCL_STATIC);
+            return TCL_ERROR;
+        }
+
+        if (count != 3) {
+            Tcl_SetResult(interp, (char *) "FlannBasedMatcher invalid indexParams data", TCL_STATIC);
+            return TCL_ERROR;
+        } else {
+            Tcl_Obj *elemListPtr = NULL;
+
+            Tcl_ListObjIndex(interp, objv[1], 0, &elemListPtr);
+            if(Tcl_GetIntFromObj(interp, elemListPtr, &table_number) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            Tcl_ListObjIndex(interp, objv[1], 1, &elemListPtr);
+            if(Tcl_GetIntFromObj(interp, elemListPtr, &key_size) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            Tcl_ListObjIndex(interp, objv[1], 2, &elemListPtr);
+            if(Tcl_GetIntFromObj(interp, elemListPtr, &multi_probe_level) != TCL_OK) {
+                return TCL_ERROR;
+            }
+        }
+    }
+
+    try {
+        flannBasedMatcher = cv::makePtr<cv::FlannBasedMatcher>(
+                                                cv::makePtr<cv::flann::LshIndexParams>(
+                                                    table_number,
+                                                    key_size,
+                                                    multi_probe_level
+                                                )
+                                            );
+
+        if (flannBasedMatcher == nullptr) {
+            Tcl_SetResult(interp, (char *) "flannBasedMatcher create failed", TCL_STATIC);
+            return TCL_ERROR;
+        }
+    } catch (...){
+        Tcl_SetResult(interp, (char *) "FlannBasedMatcher failed", TCL_STATIC);
+        return TCL_ERROR;
+    }
+
+    pResultStr = Tcl_NewStringObj( "cv-flannBasedMatcher", -1 );
+
+    Tcl_CreateObjCommand(interp, "cv-flannBasedMatcher", (Tcl_ObjCmdProc *) FlannBasedMatcher_FUNCTION,
         (ClientData)NULL, (Tcl_CmdDeleteProc *)NULL);
 
     Tcl_SetObjResult(interp, pResultStr);
